<?xml version="1.0"?>
<package format="2">
  <name>sumo_controller</name>
  <version>1.0.0</version>
  <description>The sumo_controller package</description>

  <maintainer email="comp@thunderatz.org">Equipe ThundeRatz</maintainer>

  <author email="maria.rezende@thunderatz.org">Maria Fernanda Rezende</author>
  <author email="gabriel.cosme@thunderatz.org">Gabriel Cosme Barbosa</author>

  <license>MIT</license>

  <url type="repository">https://github.com/ps-thunderatz/sumo_controller</url>

  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
